# claude-code-rig

./: .gitattributes  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS
.github/scripts/: check-redactions.sh  validate-plugin.py
.github/workflows/: claude-code.yml  installer-dryrun.yml  lint.yml  plugin-validate.yml  secret-scan.yml
core/: CLAUDE.base.md  README.md  authored-content-rules.md  coding-style.md  context-architecture.md  context-budget-policy.md  default-workflows.md  github-content-rules.md  reasoning-preferences.md  safety-rules.md  settings.template.json  skill-frontmatter-reference.md
core/agents/: code-reviewer.md  eval-auditor.md  eval-planner.md  pr-writer.md  (+2 more)
install/: LAPTOP-SETUP.md  backup.sh  bootstrap-wsl.sh  dry-run.sh  install-extensions.sh  install-module.sh  install-profile.sh  rollback.sh  setup-laptop.sh  uninstall.sh  validate.sh
learnings/: README.md  distilled.md
manifests/: environments.yaml  install.manifest.yaml  marketplace.yaml  modules.yaml  profile.manifest.yaml
playbooks/: README.md  marketplace-curation.md
profiles/: ai-assisted-coding.yaml  backend.yaml  claude-dashboard.yaml  cloud-aws.yaml  enhanced-tier2.yaml  future-work-laptop.yaml  minimal-core.yaml  personal-full.yaml  shareable-dashboard.yaml
shareable/: README.md
templates/: README.md  project-AGENTS.md.tmpl  project-CLAUDE.md.tmpl  python-flake8-79char.md  repo-onboarding.md
tools/: export-shareable.sh
(+228 files in other folders)
